@@ -1,3 +1,7 @@
+2007-02-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amverify.sh.in: Add timeout on wait for device ready.
+	* changer-src/chg-chio.pl.in: Wait (with timeout) for drive ready.
+
 2007-02-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/taper.c: Don't call free_server_config.
 
